Added input autocomplete defaults

--- a/lib/dedalo/login/html/login_edit.phtml
+++ b/lib/dedalo/login/html/login_edit.phtml
@@ -36,6 +36,7 @@
 				$html_content .= "value=\"$username_value\" ";
 				$html_content .= "placeholder=\"".$username_label."\" ";
 				$html_content .= "maxlength=\"64\" ";
+				$html_content .= "autocomplete=\"username\" ";
 				$html_content .= "/>";
 			
 			// password
@@ -46,6 +47,7 @@
 				$html_content .= "value=\"$password_value\" ";
 				$html_content .= "placeholder=\"".$password_label."\" ";
 				$html_content .= "maxlength=\"64\" ";
+				$html_content .= "autocomplete=\"current-password\" ";
 				$html_content .= "/>";
 
 			// button login
