Clean menu code 2

--- a/lib/dedalo/html_page/html/html_page.phtml
+++ b/lib/dedalo/html_page/html/html_page.phtml
@@ -75,7 +75,9 @@ const page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSO
 </script>
 <?php echo trim($js_link_code) ?>
 <script>
-
+// window.addEventListener("load", function (event) {
+// 	menu.init()
+// });
 </script>
 </head>
 <body>
