Added img.draw to html_page css

--- a/lib/dedalo/html_page/css/html_page.less
+++ b/lib/dedalo/html_page/css/html_page.less
@@ -586,7 +586,7 @@ span.ajax_loading_msg {
 /* TEXT AREA TAGS
  tags showed outside text editor
 ------------------------------------------------------------------------- */
-	img.person, img.note, img.index, img.tc, img.svg, img.page, img.geo  {
+	img.person, img.note, img.index, img.tc, img.svg, img.page, img.geo, img.draw  {
 		opacity: 1;
 		vertical-align: sub;
 		height: 15px;
