--- a/lib/dedalo/component_info/html/component_info_list.phtml
+++ b/lib/dedalo/component_info/html/component_info_list.phtml
@@ -6,17 +6,24 @@
 	switch(true) {
 			
 		case $permissions===0 :
-					$html .= "";		
-					break;
+				$html .= "";
+				break;
 					
 		case $permissions>=1 :
-					$html .= "<div class=\"widgets_wrapper\">";
-					foreach ((array)$ar_widget_html as $key => $widget_html) {
-						$html .= $widget_html;
-						#$html .= "<hr>";
+					
+				// widgets_html
+					$widgets_html = '';
+					foreach ((array)$ar_widget_html as $key => $current_widget_html) {
+						$widgets_html .= $current_widget_html;
 					}
-					$html .= "</div>";
-					break;							
+
+				// add wrapper
+				if ($widget_mode==='export') {
+					$html .= $widgets_html;
+				}else{
+					$html .= '<div class="widgets_wrapper">' . $widgets_html . '</div>';
+				}
+				break;
 	}	
 
 	if(SHOW_DEBUG===true && $modo==='edit') {
@@ -26,5 +33,3 @@
 	
 	# PRINT HTML	
 	print $html;
-	
-?>
