Fis CSS issue with transcription images in export mode

--- a/lib/dedalo/tools/tool_export/css/tool_export.less
+++ b/lib/dedalo/tools/tool_export/css/tool_export.less
@@ -50,7 +50,8 @@
 				vertical-align: top;
 
 				img {
-					height: 57px;
+					//height: 57px;
+					max-height: 57px;
 					width: auto;
 				}
 			}
