--- a/lib/dedalo/component_iri/html/component_iri_search.phtml
+++ b/lib/dedalo/component_iri/html/component_iri_search.phtml
@@ -2,7 +2,7 @@
 
 	# VISUALIZADOR HTML	
 
-	print "<div class=\"wrap_component css_wrap_iri tooltip_active\" id=\"wrap_{$tipo}\" ";
+	print "<div class=\"wrap_component css_wrap_iri tooltip_active\" id=\"{$id_wrapper}\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='".json_encode($dato)."' ";
@@ -28,17 +28,17 @@
 				$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
 				$html_content .= "/>"; */
 
-				$html_content .= "<ul>";
+				$html_content .= '<ul>';
 				
 					$obj_value = reset($dato);
 
 					# Correct issues with quotes
 					$value = isset($obj_value->iri) ? htmlentities($obj_value->iri) : null;
 
-					$html_content .= "<li class=\"input-group\">";
+					$html_content .= '<li class="input-group">';
 
 					# Input
-					$html_content .= "<input type=\"text\" id=\"{$id_wrapper}_input_{$key}\" class=\"form-control99 css_iri\" ";
+					$html_content .= "<input type=\"text\" id=\"{$id_wrapper}_input\" class=\"form-control99 css_iri\" ";
 					#$html_content .= "data-tipo=\"{$tipo}\" ";
 					#$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
 					#$html_content .= "data-parent=\"{$parent}\" ";
@@ -46,27 +46,25 @@
 					$html_content .= "value=\"{$value}\" ";
 					#$html_content .= "title=\"$html_title\" ";
 					$html_content .= "name=\"{$input_name}\" ";
-					$html_content .= "autocomplete=\"off\" ";					
-					$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";			
+					$html_content .= "autocomplete=\"off\" ";
+					$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
 					$html_content .= "/>";
 
 
-					$html_content .= "</li>";
-
+					$html_content .= '</li>';
 				
-				$html_content .= "</ul>";				
+				$html_content .= '</ul>';
 			
-
 				
 				if(SHOW_DEBUG===true) {
 					$html_content .= "<span class=\"debug_info\">$search_input_name</span>";
 				}
 				break;
 		default:
-			$html_content .= label::get_label("sin_acceso");
+				$html_content .= label::get_label("sin_acceso");
 
 	}//end switch($permissions)
-					
+
 
 	# Prepare content to show in page
 	tools::prepare_content($html_content);
@@ -77,5 +75,6 @@
 	print $html_content;
 	
 	
-	print "</div>"; //wrap
-?>
+	print '</div>'; //wrap
+
+
