Fixed quotes bug in tool_export that unsync data columns and header Implemented breakdown mode for csv export

--- a/lib/dedalo/tools/tool_export/css/tool_export.less
+++ b/lib/dedalo/tools/tool_export/css/tool_export.less
@@ -218,9 +218,12 @@
 	----------------------------------------- */
 	#download_file {
 		clear: both;
-		border-bottom: 1px solid #B2B2B2;
+		//border-bottom: 1px solid #B2B2B2;
 		display: none;
 		padding: 20px;
+
+		position: sticky;
+    	top: 90vh;
 
 		&:before {
 			content: " ";
